Added media queries for responsive functionality

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,6 +15,11 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: 28.125em) {
+    order: 1;
+    flex: 0 0 100%;
+  }
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -131,9 +136,18 @@
   flex-direction: column;
   gap: .5rem;
 
+  @media only screen and (max-width: 56.25em)  {
+    flex-direction: row;
+    margin: 0;
+  }
+
 
   &__item {
     position: relative;
+
+    @media only screen and (max-width: 56.25em)  {
+      flex: 1;
+    }
     
   }
 
@@ -174,6 +188,16 @@
     position: relative;
     z-index: 10;
 
+    @media only screen and (max-width: 56.25em)  {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: 37.5em) {
+      flex-direction: column;
+      padding: 1.5rem .5rem;
+    }
+
   }
 
 
@@ -185,6 +209,13 @@
     margin-right: 2rem;
     fill: currentColor;
 
+    @media only screen and (max-width: 37.5em) {
+      margin-right: 0;
+      margin-bottom: .7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
   }
 
 }
@@ -194,6 +225,10 @@
   text-align: center;
   padding: 2.5rem;
   color: var(--grey-light-4);
+
+  @media only screen and (max-width: 56.25em)  {
+    display: none;
+  }
 }
 
 //////////////////////////////////////
@@ -226,6 +261,15 @@
     padding: 2rem 1rem 2rem 4.5rem;
     color: var(--grey-dark-1);
 
+    @media only screen and (max-width: 37.5em) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
+
+    @media only screen and (max-width: 28.125em) {
+      padding: 1.25rem 1.5rem;
+    }
+
   }
 
   &__stars {
@@ -253,6 +297,11 @@
     display: flex;
     align-items: cemter;
     gap: .5rem;
+
+    @media only screen and (max-width: 28.125em) {
+      font-size: inherit;
+      text-align: left;
+    }
   }
   
   &__rating {
@@ -266,17 +315,33 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    @media only screen and (max-width: 37.5em) {
+      padding: 0 1.5rem;
+    }
+
+    @media only screen and (max-width: 28.125em) {
+      margin-left: 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -.3rem;
+
+    @media only screen and (max-width: 37.5em) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: 37.5em) {
+      font-size: .5rem;
+    }
   }
 
 
@@ -368,7 +433,9 @@
 
     background-color: var(--color-primary);
     -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    mask-image: url(../img/chevron-thin-right.svg);
     -webkit-mask-size: cover;
+    mask-size: cover;
   }
 }
 
@@ -397,7 +464,7 @@
   }
 
   &__friends {
-
+    display: flex;
   }
 }
 
@@ -412,6 +479,13 @@
   position: relative;
   overflow: hidden;
 
+  @media only screen and (max-width: 37.5em) {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
   &__text {
     margin-bottom: 2rem;
     z-index: 10;
@@ -421,7 +495,6 @@
   &__user {
     display: flex;
     align-items: center;
-
   }
 
   &__photo {
@@ -476,6 +549,13 @@
 .cta {
   padding: 4.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: 56.25em)  {
+    padding: 3.5rem 0;
+  }
+  @media only screen and (max-width: 37.5em)  {
+    padding: 3rem 2rem;
+  }
 
   &__book-now {
     text-transform: uppercase;
