--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,7 +49,14 @@ Grey dark 3: #999
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 62.5%; //1rem = 10px
+
+  @media only screen and (max-width: 68.75em) {
+    font-size: 50%;
+  }
+  @media only screen and (max-width: 28.125em) {
+    font-size: 42%;
+  }
 }
 
 body {
